Fixed time scale shifting, mouse click accuracy

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
   
   #container {
     margin-left: 50px;
+    margin-top : 50px;
     display: flex;
     height: 100%;
   }
